--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -7,6 +7,7 @@
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
+                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -34,6 +35,7 @@
     <script>
         console.log('Test page loaded');
         let brokerBtn = document.getElementById('brokerBtn');        
+        let authBrokerBtn = document.getElementById('authBrokerBtn');
         let output = document.getElementById('output');
         let sent = document.getElementById('payload');
         let received = document.getElementById('received');
@@ -62,5 +64,40 @@
                 });
             });
                 
+        authBrokerBtn.addEventListener('click', function() {
+            sent.innerHTML = 'Loading...';
+            received.innerHTML = 'Loading...';
+
+            const payload = {
+                action: "auth",
+                auth: {
+                    email: "admin@example.com",
+                    password: "verysecret",
+                }
+            };
+            const headers = new Headers();
+            headers.append('Content-Type', 'application/json');
+            const body = {
+                method: 'POST',
+                headers: headers,
+                body: JSON.stringify(payload)
+            };
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
+                    } else {
+                        output.innerHTML += `<br><string>Response from brocker service</strong>: ${data.message}`;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    output.innerHTML += `<br><br><strong>Error</strong>: ${error}`;
+                });
+            });
+ 
     </script>
 {{end}}
