--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
+                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test mail</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -38,9 +39,47 @@
         let brokerBtn = document.getElementById('brokerBtn');        
         let authBrokerBtn = document.getElementById('authBrokerBtn');
         let logBtn = document.getElementById('logBtn');
+        let mailBtn = document.getElementById('mailBtn');
         let output = document.getElementById('output');
         let sent = document.getElementById('payload');
         let received = document.getElementById('received');
+
+        mailBtn.addEventListener('click', function() {
+            sent.innerHTML = 'Loading...';
+            received.innerHTML = 'Loading...';
+
+            const payload = {
+                action: "mail",
+                mail: {
+                    from: "me@example.com",
+                    to: "to@there.com",
+                    subject: "Test email",
+                    message: "Hello World!",
+                }
+            };
+            const headers = new Headers();
+            headers.append('Content-Type', 'application/json');
+            const body = {
+                method: 'POST',
+                headers: headers,
+                body: JSON.stringify(payload)
+            };
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
+                    } else {
+                        output.innerHTML += `<br><string>Response from brocker service</strong>: ${data.message}`;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    output.innerHTML += `<br><br><strong>Error</strong>: ${error}`;
+                });
+        });
 
         logBtn.addEventListener('click', function() {
             const payload = {
