--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -66,7 +66,7 @@
                 headers: headers,
                 body: JSON.stringify(payload)
             };
-            fetch("http:\/\/localhost:8080/handle", body)
+            fetch({{print .BrokerURL "/handle"}}, body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -98,7 +98,7 @@
                 headers: headers,
                 body: JSON.stringify(payload),
             };
-            fetch("http:\/\/localhost:8080/handle", body)
+            fetch({{print .BrokerURL "/handle"}}, body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -130,7 +130,7 @@
                 headers: headers,
                 body: JSON.stringify(payload),
             };
-            fetch("http:\/\/localhost:8080/log-grpc", body)
+            fetch({{print .BrokerURL "/log-grpc"}}, body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -156,7 +156,7 @@
             const body = {
                 method: 'POST',
             };
-            fetch("http:\/\/localhost:8080", body)
+            fetch({{.BrokerURL}}, body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = JSON.stringify("empty post request");
@@ -191,7 +191,7 @@
                 headers: headers,
                 body: JSON.stringify(payload)
             };
-            fetch("http:\/\/localhost:8080/handle", body)
+            fetch({{print .BrokerURL "/handle"}}, body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = JSON.stringify(payload, undefined, 4);
