89. Solution to challenge

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -152,6 +152,7 @@
         brokerBtn.addEventListener('click', function() {
             sent.innerHTML = 'Loading...';
             received.innerHTML = 'Loading...';
+            console.log({{print .BrokerURL "   Broker button clicked"}});
 
             const body = {
                 method: 'POST',
